--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -2,10 +2,18 @@
   "packageDirectories": [
     {
       "path": "force-app",
-      "default": true
+      "default": true,
+      "dependencies": [
+        {
+          "package": "Copado Deployer@17.0.0.0"
+        }
+      ]
     }
   ],
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "50.0"
+  "sourceApiVersion": "50.0",
+  "packageAliases": {
+    "Copado Deployer@17.0.0.0": "04t5p000000YGbv"
+  }
 }
