--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,7 +5,7 @@
       "default": true,
       "dependencies": [
         {
-          "package": "Copado Deployer@17.0.0.0"
+          "package": "Copado Deployer@17.4.0.0"
         }
       ]
     }
@@ -14,6 +14,6 @@
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "50.0",
   "packageAliases": {
-    "Copado Deployer@17.0.0.0": "04t5p000000YGbv"
+    "Copado Deployer@17.4.0.0": "04t5p000000YGce"
   }
 }
