Finalized Custom Fieldset Edit Recipe

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "rsosemann company",
+  "orgName": "salesforce-recipes_DEV",
   "edition": "Developer",
   "features": [],
   "settings": {
