--- a/.forceignore
+++ b/.forceignore
@@ -4,6 +4,12 @@
 
 package.xml
 
+**appMenu
+**appSwitcher
+**objectTranslations
+**profiles
+**settings
+
 # LWC configuration files
 **/jsconfig.json
 **/.eslintrc.json
