--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,6 +1,8 @@
 {
   "orgName": "salesforce-recipes_DEV",
   "edition": "Developer",
+  "country": "US",
+  "language": "en_US",
   "features": [],
   "settings": {
     "lightningExperienceSettings": {
