--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -3,7 +3,7 @@
   "edition": "Developer",
   "country": "US",
   "language": "en_US",
-  "features": [],
+  "features": ["PlatformCache"],
   "settings": {
     "lightningExperienceSettings": {
       "enableS1DesktopEnabled": true
