--- a/.forceignore
+++ b/.forceignore
@@ -17,3 +17,7 @@ package.xml
 # LWC Jest
 **/__tests__/**
 force-app/main/default/quickActions/Account.ActivateVfAction.quickAction-meta.xml
+
+# QWeb 
+**/qweb/**
+**/*.robot
