--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -14,7 +14,7 @@ jobs:
           distribution: 'temurin'
       - uses: pmd/pmd-github-action@v1
         with:
-          rulesets: 'ruleset.xml'
+          rulesets: ruleset.xml
           analyzeModifiedFilesOnly: false
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
