--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -14,8 +14,8 @@ jobs:
           distribution: 'temurin'
       - uses: pmd/pmd-github-action@v1
         with:
-          rulesets: '/ruleset.xml'
-          analyzeModifiedFilesOnly: false
+          rulesets: '**/ruleset.xml'
+          analyzeModifiedFilesOnly: true
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
         with:
