--- a/.github/workflows/sfdx-scanner.yml
+++ b/.github/workflows/sfdx-scanner.yml
@@ -1,4 +1,4 @@
-name: Static Analysis using SFDX Scanner
+name: SFDX Scanner (Static Analysis)
 on:
   pull_request:
     types: [opened, reopened, synchronize]
