--- a/.github/workflows/sfdx-scanner.yml
+++ b/.github/workflows/sfdx-scanner.yml
@@ -1,7 +1,7 @@
 name: SFDX Scanner (Static Code Analysis)
 on:
   pull_request:
-    types: [opened, reopened, synchronize]
+    types: [opened, reopened, synchronize, edited]
   workflow_dispatch:
 jobs:
   analyze:
